--- a/src/modules/sass/typo.sass
+++ b/src/modules/sass/typo.sass
@@ -24,5 +24,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
 
+$body-font-family: 'Open Sans', sans-serif
+
 .featured-text
   color: $featured-text
